; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Kernel.c_GetNumberOfCpu.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Kernel.c_GetNumberOfCpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cached_number_of_cpus = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GetNumberOfCpu() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %3 = load i32, i32* @cached_number_of_cpus, align 4
  %4 = icmp eq i32 %3, 0
  br i1 %4, label %5, label %12

5:                                                ; preds = %0
  store i32 0, i32* %2, align 4
  %6 = call i32 (...) @UnixGetNumberOfCpuInner()
  store i32 %6, i32* %2, align 4
  %7 = load i32, i32* %2, align 4
  %8 = icmp eq i32 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %5
  store i32 8, i32* %2, align 4
  br label %10

10:                                               ; preds = %9, %5
  %11 = load i32, i32* %2, align 4
  store i32 %11, i32* @cached_number_of_cpus, align 4
  br label %12

12:                                               ; preds = %10, %0
  %13 = load i32, i32* @cached_number_of_cpus, align 4
  store i32 %13, i32* %1, align 4
  %14 = load i32, i32* %1, align 4
  %15 = icmp eq i32 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %12
  store i32 1, i32* %1, align 4
  br label %17

17:                                               ; preds = %16, %12
  %18 = load i32, i32* %1, align 4
  %19 = icmp sgt i32 %18, 128
  br i1 %19, label %20, label %21

20:                                               ; preds = %17
  store i32 128, i32* %1, align 4
  br label %21

21:                                               ; preds = %20, %17
  %22 = load i32, i32* %1, align 4
  ret i32 %22
}

declare dso_local i32 @UnixGetNumberOfCpuInner(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
